# python-cookbook

./: .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  LICENSE  Pipfile  Pipfile-3.9.txt  README.md  pyproject.toml
.github/workflows/: lint.yml
cookbook/core/asyncio/: coroutine.md  coroutine_concurrent.md  queue.md  schedule.md  tcp_client.md  tcp_client_low.md  tcp_server.md  tcp_server_low.md  timeout.md  wait.md
cookbook/core/concurrent/: processes_high_level.md  processes_low_level.md
cookbook/core/context_manager/: context_manager.md  context_manager_multiple.md  context_manager_protocol.md  context_manager_reusable.md  context_manager_single_use.md  with_statement.md
cookbook/core/decorator/: class_decorator.md  function_decorator_args_optional.md  function_decorator_args_required.md  function_decorator_no_args.md
cookbook/core/exception/: suppress_exceptions.md
cookbook/core/ext_type/: dataclass.md  namedtuple.md  ordereddict.md
cookbook/core/general/: calculate_dict.md  common_dict.md  flat_seq.md  groupby.md  largest_smallest_n.md  priority_queue.md  sort_object.md  unpack_iterable.md
cookbook/core/io/: binary_io.md  fd_inheritable.md  file_object.md  open_ref_impl.md  text_io.md
cookbook/core/logging/: logging_dict_config.md  logging_flow.md  logging_usage.md
cookbook/core/net/: buffer_size.md  io_multiplex_client.md  io_multiplex_server.md  reuse_port.md  struct.md  tcp_client_ipv4.md  tcp_connect_timeout_client.md  tcp_connect_timeout_server.md  tcp_keepalive.md  tcp_listen_queue.md  tcp_nodelay.md  tcp_reuse_address.md  tcp_server_ipv4.md  tcp_server_ipv4_std.md  tcp_transmission_timeout.md
cookbook/core/socket/: buffer_size.md  reuse_port.md  tcp_connect_timeout_client.md  tcp_connect_timeout_server.md  tcp_keepalive.md  tcp_listen_queue.md  tcp_nodelay.md  tcp_quickack.md  tcp_reuse_address.md  tcp_transmission_timeout.md
cookbook/core/system/: subprocess.md
cookbook/core/text/: regex_patterns.md  str_fmt_spec.md  universal_newline.md
cookbook/core/time/: datetime_fmt_iso_8601.md  datetime_fmt_rfc_2822.md  datetime_fmt_str.md  time.md  timezone.md
cookbook/core/type_hint/: type_hint.md  type_hint_for_any.md  type_hint_for_basic_type.md  type_hint_for_callable.md  type_hint_for_class_var.md  type_hint_for_constant.md  type_hint_for_generic.md  type_hint_for_inheritance.md  type_hint_for_itertools_chain.md  type_hint_for_literal.md  type_hint_for_namedtuple.md  type_hint_for_noreturn.md  type_hint_for_override.md  type_hint_for_regex.md  type_hint_for_socket.md  type_hint_for_type.md  type_hint_for_type_alias.md  type_hint_for_typeddict.md  type_hint_for_union.md
cookbook/core/web/: http_cookie.md
cookbook/data/: pydantic.md
cookbook/system_services/: mongodb.md  mongodb_motor.md  mqtt_aiomqtt.md  redis.md  sql_db.md
cookbook/web/: django_cache_redis.md  django_db_postgresql.md  django_logging.md  django_quickstart.md  fastapi.md  http_cookie.md  http_datetime_fmt.md  http_request.md  idna.md  pydantic.md  redis.md  url_parse.md  urllib_parse.md  urllib_request.md  uvicorn.md  wsgi.md
data/: django_postgresql.sql
django_project/django_project/: settings.py  urls.py
django_project/example_app/: admin.py  apps.py  models.py  urls.py  views.py
examples/core/: asyncio_basic.py  asyncio_coroutine.py  asyncio_coroutine_chain.py  asyncio_coroutine_concurrent.py  asyncio_coroutine_concurrent_before_py311.py  asyncio_nonblocking.py  asyncio_queue.py  asyncio_schedule.py  asyncio_synchronization_condition.py  asyncio_synchronization_event.py  asyncio_synchronization_lock.py  asyncio_synchronization_semapore.py  asyncio_tcp_client.py  asyncio_tcp_client_low.py  asyncio_tcp_server.py  asyncio_tcp_server_low.py  asyncio_timeout.py  asyncio_wait.py  cli_args.py  io_multiplex_client.py  io_multiplex_server.py  ipc_socketpair.py  ipc_unix_domain_socket_client_ipv4.py  ipc_unix_domain_socket_server_ipv4.py  ipv4_multicast_udp_client.py  ipv4_multicast_udp_server.py  net.py  pack_unpack_bin_data.py  sysctl.conf  tcp_client_asyncio_high_api.py  tcp_client_asyncio_low_api.py  tcp_client_ipv4.py  tcp_client_ipv4_basic.py  tcp_client_ipv4_io_multiplex.py  tcp_client_ipv4_std.py  tcp_client_ipv4_timeout.py  tcp_server_asyncio_high_api.py  tcp_server_asyncio_low_api.py  tcp_server_ipv4.py  tcp_server_ipv4_blocking.py  (+13 more)
examples/system_services/: mqtt_aiomqtt_usage.py  redis_usage.py
examples/web/: redis_usage.py  uvicorn_logging.json  wsgi_app.py
more/core/: endianness.md  function_decorator.md  iso_8601_fmt.md  logging.md  tcp_rfc1337.md  tcp_sack.md  tcp_slowstart.md  type_hint.md
more/web/: csrf.md  http_authentication.md  http_basic.md  http_connection.md  http_cookie.md  uri_url_urn.md
recipes/core/: argparse.md  asyncio_basic.md  asyncio_coroutine.md  asyncio_coroutine_chain.md  asyncio_coroutine_concurrent.md  asyncio_nonblocking.md  asyncio_queue.md  asyncio_schedule.md  asyncio_synchronization_condition.md  asyncio_synchronization_event.md  asyncio_synchronization_lock.md  asyncio_synchronization_semapore.md  asyncio_wait.md  binary_io.md  concurrent_processes.md  concurrent_threads.md  context_manager.md  context_manager_multiple.md  context_manager_protocol.md  context_manager_reentrant.md  context_manager_single_use.md  datetime_fmt_iso_8601.md  datetime_fmt_rfc_2822.md  datetime_fmt_rfc_3339.md  datetime_fmt_str.md  function_decorator_args_optional.md  function_decorator_args_required.md  function_decorator_no_args.md  ip_multicast.md  ipc_socketpair.md  ipc_unix_domain_socket.md  iso_8601_fmt.md  local_time.md  local_time_to_timestamp.md  logging_config.md  logging_dict_config.md  logging_usage.md  multi_processes.md  multi_processes_queue.md  multi_threads.md  (+86 more)
recipes/web/: curl.md  django_cache_redis.md  django_db_postgresql.md  django_logging.md  django_quickstart.md  http_caching.md  http_cookie.md  http_datetime_fmt.md  http_range.md  http_request.md  http_server_builtin.md  httpie.md  postgresql_setup.md  postgresql_usage.md  redis.md  redis_setup.md  redis_usage_basic.md  url_parse.md  wsgi.md
(+18 files in other folders)
