[project]
name = "python-cookbook"
description = "Recipes for Python. Hands-on code examples and snippets for daily work."
authors = [{ name = "Li Yun", email = "lucassix.lee@gmail.com" }]
readme = "README.md"
requires-python = "~=3.12"
license-files = ["LICEN[CS]E*"]
maintainers = [{ name = "Li Yun", email = "lucassix.lee@gmail.com" }]
keywords = ["cookbook", "recipe", "fastapi", "mongodb"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",

    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",

    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "pydantic",
    "fastapi[all]",
    "uvicorn[standard]",
    #"python-jose[cryptography]",
    #"types-python-jose",
    "motor",
    #"beanie",
    #"pyodmongo",
    "redis[hiredis]",
    "types-redis",
    "aiomqtt",
    "celery[librabbitmq, mongodb, redis]",
    #"requests",
    #"types-requests",
]
dynamic = ["version"]

[project.urls]
Home = "https://lucas-six.github.io/python-cookbook/"
Documentation = "https://lucas-six.github.io/python-cookbook/"
Repository = "https://github.com/lucas-six/python-cookbook/"

[tool.setuptools]
py-modules = ['cookbook', 'examples']

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pylint>=3.3.6",
    "pylint-pydantic>=0.3.5",
]

[tool.black]
line-length = 88
target-version = ['py311', 'py312']
skip-string-normalization = true
include = '\.pyi?$'
extend-exclude = '''
tests/.*\.py$
'''

[tool.isort]
src_paths = ["examples"]
atomic = true
profile = "black"
# skip = [
#    '.bzr',
#    '.direnv',
#    '.eggs',
#    '.git',
#    '.hg',
#    '.mypy_cache',
#    '.nox',
#    '.pants.d',
#    '.svn',
#    '.tox',
#    '.venv',
#    '__pypackages__',
#    '_build',
#    'buck-out',
#    'build',
#    'dist',
#    'node_modules',
#    'venv'
# ]
skip_gitignore = true
extend_skip = [".gitignore", ".env", ".dockerignore"]
# skip_glob = []
extend_skip_glob = []

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
exclude = []
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_any_generics = false
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = "motor.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[tool.pylint.main]
recursive = true
py-version = 3.12
jobs = 0
ignore = "CVS,.git,__pycache__,.venv,.mypy_cache,.pytest_cache,tests"
ignore-paths = "tests"
ignore-patterns = "test_.*.py"
ignored-classes = "Body"
extension-pkg-whitelist = "pydantic"
load-plugins = ["pylint.extensions.bad_builtin", "pylint_pydantic"]

[tool.pylint.'FORMAT']
max-line-length = 88

[tool.pylint.'LOGGING']
logging-format-style = "new"

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "deprecated-pragma",
    "suppressed-message",
    "use-symbolic-message-instead",
    "missing-class-docstring",
    "missing-function-docstring",
    "duplicate-code",
    "logging-fstring-interpolation",
    "too-many-positional-arguments",
]
enable = [
    "c-extension-no-member",
    "useless-suppression",
    "logging-format-interpolation",
]

[tool.pylint.design]
max-args = 15
min-public-methods = 0
max-locals = 25
max-branches = 20
max-statements = 80

[tool.pylint.deprecated_builtins]
bad-functions = ["map", "filter"]

[tool.pytest.ini_options]
markers = []
addopts = [
    "--strict-markers",
    "--cov",
    "--cov-append",
    "--durations=5",
    "--durations-min=0.25",
]
norecursedirs = [".git", ".*_cache", ".tox", "*.egg-info", "docs"]

[tool.coverage.run]
parallel = true

[tool.coverage.report]
skip_empty = true

[tool.pyright]
include = ["examples"]
exclude = [".git", "**/__pycache__", "**/.mypy_cache"]
reportGeneralTypeIssues = "none"
reportUnboundVariable = "none"
stubPath = ""
pythonVersion = "3.12"
