[project]
name = "python-cookbook"
description = "Recipes for Python. Hands-on code examples and snippets for daily work."
authors = [{ name = "Li Yun", email = "lucassix.lee@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
license-files = ["LICEN[CS]E*"]
maintainers = [{ name = "Li Yun", email = "lucassix.lee@gmail.com" }]
keywords = ["cookbook", "recipe", "fastapi", "sql", "mongodb"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",

    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",

    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "pydantic",
    "fastapi[all]",
    "uvicorn[standard]",
    "sqlmodel>=0.0.24",
    "pymongo>=4.15.5",
    #"beanie",
    #"pyodmongo",
    "redis[hiredis]",
    "types-redis",
    "aiomqtt",
    #"requests",
    #"types-requests",
]
dynamic = ["version"]

[project.urls]
Home = "https://lucas-six.github.io/python-cookbook/"
Documentation = "https://lucas-six.github.io/python-cookbook/"
Repository = "https://github.com/lucas-six/python-cookbook/"

[tool.setuptools]
py-modules = ['cookbook', 'examples']

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.12.1",
    "pytest",
    "coverage[toml]>=7.10.7",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 100
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
extend-safe-fixes = [
    # non-pep585-annotation
    "UP006",
]
select = [
    # flake8-annotations
    "ANN",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # pycodestyle
    "E",
    # Pyflakes errors
    "F",
    # isort
    "I",
    # flake8-simplify
    "SIM",
    # flake8-tidy-imports
    "TID",
    # pyupgrade
    "UP",
    # Pyflakes warnings
    "W",
]
ignore = []

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
exclude = []
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_any_generics = false
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = []
addopts = [
    "--strict-markers",
    "--cov",
    "--cov-append",
    "--durations=5",
    "--durations-min=0.25",
]
norecursedirs = [".git", ".venv", ".*_cache", ".tox", "*.egg-info", "docs"]

[tool.coverage.run]
parallel = true

[tool.coverage.report]
skip_empty = true

[tool.pyright]
include = ["examples"]
exclude = [
    ".git",
    "**/__pycache__",
    ".venv",
    "**/*.egg-info",
    ".ruff_cache",
    ".mypy_cache",
    ".pytest_cache",
    ".tox",
]
reportGeneralTypeIssues = "none"
reportUnboundVariable = "none"
stubPath = ""
pythonVersion = "3.13"
